fix: Aligning the circle on bar

--- a/src/Components/Experience/ExperienceTimeline.scss
+++ b/src/Components/Experience/ExperienceTimeline.scss
@@ -32,8 +32,8 @@ $font-color: #a2aa94;
     &:before {
       content: '';
       position: absolute;
-      top: 0;
-      left: -7px;
+      top: 5px;
+      left: -12px;
       width: 15px;
       height: 15px;
       border-radius: 50%;
